<?xml version="1.0"?>
<package>
  <name>my_youbot_planning_server</name>
  <version>0.1.0</version>
  <description>Provides sets of instructions to be executed by the robots</description>

  <maintainer email="rick.candell@nist.gov">Rick Canell</maintainer>
  <license>MIT</license>
  <author email="rick.candell@nist.gov">Rick Canell</author> 
		
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>my_youbot_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>my_youbot_msgs</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>